--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,33 @@ footer {
     margin-top: 50px;
 }
 
+.header-image-small-div{
+    text-align: center;
+    border: 1px solid bisque;
+    background-color: #bbbbbb;
+    opacity: 0.5;
+    border-radius: 5px;
+}
+.numbers-div{
+    font-size: x-large;
+    padding: 0;
+    margin: 0;
+}
+#five-hundread{
+    position: absolute;
+    width: 110px;
+    height: 80px;
+    margin-top: 70px;
+    margin-left: 190px;
+}
+#three-hundread{
+    position: absolute;
+    width: 110px;
+    height: 80px;
+    margin-top: -130px;
+}
+
+
 /* responsive media query */
 @media only screen and (max-width: 576px) {
 
@@ -396,5 +423,19 @@ footer {
         grid-column: span 2;
     
     }
+    /* #header-exercise-img{
+    width: 60%;
+    margin-top: 550px;
+    margin-bottom: 150px;
+    }
+    #five-hundread{
+    margin-left: -350px;
+    margin-top: -180px;
+}
+#three-hundread{
+    margin-left: -530px;
+    margin-bottom: -600px;
+    z-index: 1;
+} */
 
 }
