--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ select {
 }
 
 .text-color-p {
-    color: rgb(132, 119, 119);
+    color: rgb(116, 110, 110);
 }
 
 /* header styles */
@@ -146,12 +146,13 @@ input[type="text"] {
 }
 
 .run-extra {
-    background-color: rgb(118, 12, 12);
+    background-color: #403d3d;
     max-width: 1040px;
     margin: 20px auto;
     padding: 20px 0;
     gap: 40px;
     justify-content: space-around;
+    border-radius: 15px;
 }
 
 .run-extra-text {
@@ -219,6 +220,9 @@ td {
 }
 
 .tariner-image {
+    background-color: #403d3d;
+    padding: 15px;
+    border-radius: 15px;
     max-width: 1040px;
     display: grid;
     margin: auto;
@@ -226,10 +230,16 @@ td {
     gap: 10px;
 }
 
-.tariner-image>img {
+.all-trainer>img{
     width: 100%;
     height: 100%;
+    border-radius: 15px;
     object-fit: cover;
+}
+.trainer-name{
+    position: absolute;
+    margin-top: -90px;
+    margin-left: 20px;
 }
 
 
@@ -249,11 +259,13 @@ td {
 details>summary {
     padding: 4px;
     width: 1040px;
+    height: 30px;
     background-color: #eeeeee;
     border: none;
     box-shadow: 1px 1px 2px #bbbbbb;
     cursor: pointer;
     background-color: rgb(51, 41, 41);
+    border-radius: 5px;
 }
 
 details>p {
@@ -300,6 +312,7 @@ footer {
     height: 80px;
     margin-top: -130px;
 }
+
 
 
 /* responsive media query */
