--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,12 @@ input[type="text"] {
     border: 1px solid red;
     border-radius: 25px;
 }
+.join-now {
+    background-color: red;
+    padding: 10px 30px;
+    border: 1px solid red;
+    border-radius: 25px;
+}
 
 .download-club {
     background-color: black;
@@ -235,6 +241,7 @@ td {
     height: 100%;
     border-radius: 15px;
     object-fit: cover;
+  
 }
 .trainer-name{
     position: absolute;
@@ -436,6 +443,26 @@ footer {
         grid-column: span 2;
     
     }
+    .run-extra-text {
+        margin: auto;
+        
+    }
+    .run-img {
+        width: 90%;
+        margin: auto;
+    }
+
+    
+details>summary {
+    padding: 6px;;
+    height: 50px;
+}
+
+details>p {
+    padding: 6px;
+}
+    
+   
     /* #header-exercise-img{
     width: 60%;
     margin-top: 550px;
