--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,9 @@ body {
 .habit-div-width {
     width: 250px;
 }
+.margin-zero{
+    margin: 0;
+}
 
 .text-center {
     text-align: center;
@@ -87,6 +90,15 @@ input[type="text"] {
 
 /* -------header and  image small 500+ & 350+ div styles------------ */
 
+.playbutton-image{
+    display: none;
+}
+.play-button-circle{
+    padding: 20px;
+    background-color: rgb(164, 125, 26);
+    border-radius: 20px;
+
+}
 
 #shape {
     font-family: "Playwrite CU", cursive;
@@ -135,6 +147,8 @@ input[type="text"] {
     width: 110px;
     height: 80px;
     margin-top: -130px;
+    align-items: center;
+
 }
 
 /* ------------header button styles---------------- */
@@ -379,7 +393,9 @@ details>p {
 
 /* --------------------------------------------------------------------responsive media query----------------------------------------------------------------------- */
 @media only screen and (max-width: 576px) {
-
+    .playbutton-image{
+        display: block;
+    }
     .nav-links {
         display: none;
     }
