--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ input[type="text"] {
 }
 
 /* ------------------------navbar related styles---------------------- */
+
 .navbar {
     justify-content: space-between;
     align-items: center;
@@ -84,9 +85,6 @@ input[type="text"] {
 #menu-img {
     display: none;
 }
-
-
-
 
 /* -------header and  image small 500+ & 350+ div styles------------ */
 
@@ -326,6 +324,7 @@ td {
 }
 
 /* -------------------trainer and exercise section styles --------------------------- */
+
 .tariner-image {
     background-color: #403d3d;
     padding: 15px;
@@ -352,6 +351,7 @@ td {
 }
 
 /* ----------------footer styles------------------------ */
+
 .footer-div {
     width: 1040px;
     display: grid;
@@ -382,9 +382,9 @@ details>summary {
     padding: 4px;
     width: 1040px;
     height: 30px;
-    background-color: #eeeeee;
+    /* background-color: #eeeeee; */
     border: none;
-    box-shadow: 1px 1px 2px #bbbbbb;
+    /* box-shadow: 1px 1px 2px #bbbbbb; */
     cursor: pointer;
     background-color: rgb(51, 41, 41);
     border-radius: 5px;
@@ -395,7 +395,7 @@ details>p {
     padding: 4px;
     width: 1040px;
     margin: 0;
-    box-shadow: 1px 1px 2px #bbbbbb;
+    /* box-shadow: 1px 1px 2px #bbbbbb; */
     background-color: rgb(61, 51, 51);
 }
 
@@ -566,7 +566,7 @@ details>p {
     }
 
     #weight-kg {
-        width: 88%;
+        width: 85.5%;
     }
 
     .input-bmi {
